changed sample labels

--- a/Create TSV from Matrix.ipynb
+++ b/Create TSV from Matrix.ipynb
@@ -21,7 +21,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "folder_to_name = {'bam_overexpression': 'hsbam',\n",
